# dfps

./: .clang-format  CMakeLists.txt  NOTICE  README.md  build.sh
magisk/: initsvc.sh  install.sh  module.prop  uninstall.sh
magisk/common/: service.sh
magisk/config/: dfps.json  dfps.txt  dfps_help_cn.md  dfps_help_en.md
source/: CMakeLists.txt  dfps.cpp  dfps.h  main.cpp  version.c.in  version.h
source/modules/: cgroup_listener.cpp  cgroup_listener.h  cobridge_type.h  dynamic_fps.cpp  dynamic_fps.h  input_listener.cpp  input_listener.h  offscreen_monitor.cpp  offscreen_monitor.h  topapp_monitor.cpp  topapp_monitor.h
source/platform/: cobridge.cpp  cobridge.h  delayed_worker.cpp  delayed_worker.h  heavy_worker.cpp  heavy_worker.h  inotifier.cpp  inotifier.h  module_base.cpp  module_base.h  singleton.h
source/utils/: atrace.c  atrace.h  backtrace.cpp  backtrace.h  cobridge.cpp  cobridge.h  delayed_worker.cpp  delayed_worker.h  fmt_exception.h  frame_pointer_trace.c  frame_pointer_trace.h  heavy_worker.cpp  heavy_worker.h  inotify.cpp  inotify.h  input_reader.cpp  input_reader.h  misc.cpp  misc.h  misc_android.cpp  misc_android.h  sched_ctrl.c  sched_ctrl.h  singleton.h  time_counter.cpp  time_counter.h
